CX2: Fix very low contrast on card title text
Card title text used #aaa as text color on a white background
which does not provide enough contrast for our accessibility requirements,
so it is changed to #72777d from our standard palette (M82)

Bug: T168267

--- a/modules/ui/styles/widgets/mw.cx.ui.TranslationToolWidget.less
+++ b/modules/ui/styles/widgets/mw.cx.ui.TranslationToolWidget.less
@@ -43,7 +43,7 @@
 .card__title--language {
 	.mw-ui-item;
 	.mw-ui-one-half;
-	color: #aaa;
+	color: @colorGray7;
 	padding: 4px;
 }
 
